# TDCR

./: .gitignore  .gitmodules  F28069M.ccxml  F28069M_xds100v2.ccxml  README.md  pyproject.toml
firmware/config_f28069m_drv8305/: user_mtr_on_j1.h  user_mtr_on_j5.h
firmware/firmware_can/mw_dual_motor_torque_ctrl/.claude/: settings.local.json
firmware/firmware_can/mw_dual_motor_torque_ctrl/src/: dual_motor_torque_ctrl.c  main_helper.h
firmware/firmware_can/mw_dual_motor_vel_pos_ctrl/ccs/: .cproject
firmware/firmware_can/mw_dual_motor_vel_pos_ctrl/src/: dual_motor_vel_pos_ctrl.c  main_2mtr.h  main_helper.h
src/odri_can/: main.py
src/odri_can/can/: mock_backend.py
src/odri_can/models/: motor_state.py
src/odri_can/protocol/: messages.py  odri_driver.py
src/odri_can/ui/: connection_panel.py  control_panel.py
src/tendon_driven_continuum_robot.egg-info/: PKG-INFO  top_level.txt
tdcr_app/src/odri_can/: __init__.py
tdcr_app/src/odri_can/can/: interface.py  slcan_backend.py
tdcr_app/src/odri_can/protocol/: codec.py
tdcr_app/src/odri_can/ui/: log_panel.py  main_window.py  telemetry_plots.py
tdcr_app/src/tendon_driven_continuum_robot.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
tests/: test_codec.py  test_driver_mock.py
udriver_firmware/: .gitignore
udriver_firmware/firmware/firmware_can/mw_dual_motor_vel_pos_ctrl/: .gitignore
udriver_firmware/firmware/firmware_can/mw_dual_motor_vel_pos_ctrl/ccs/: .project
udriver_firmware/firmware/firmware_can/mw_dual_motor_vel_pos_ctrl/src/: canapi.cpp  canapi.h  ctrl_pid.h
